# 3D-Software-Renderer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/data/: TFrameBuffer.cpp  TFrameBuffer.h  TStructs.cpp  TStructs.h  TTexture.cpp  TTexture.h
src/util/: TGfx.cpp  TGfx.h  TMatrixStack.cpp  TMatrixStack.h
